# SimpleAttnViz

./: .gitignore  README.md  pyproject.toml
data/: config.json
src/sav/: data.py  main.py  model.py  utils.py
