[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ViT-CIFAR"
version = "0.0.1"
authors = [
    { name = "Xiaokai Zhang", email = "xiaokaizhang1999@163.com" },
]
description = "A Simple Method for Attention Visualization."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch >= 2.7.0",
    "torchvision >= 0.22.0",
    "matplotlib >= 3.9.2",
    "tqdm >= 4.66.5",
    "numpy >= 1.26.4"
]
[project.urls]
"Homepage" = "https://github.com/BitSecret/SimpleAttnViz"
"Bug Tracker" = "https://github.com/BitSecret/SimpleAttnViz/issues"